[gd_scene load_steps=7 format=3 uid="uid://cuo81j7e3ecpg"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_4tbwa"]
[ext_resource type="AudioStream" uid="uid://psovfa3j526h" path="res://assets/sounds/gameover.mp3" id="2_1nfwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hubvx"]
bg_color = Color(0.0687983, 0.0687983, 0.0687982, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cawlr"]
bg_color = Color(0.741382, 0.741386, 0.741385, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oajaw"]
bg_color = Color(0.593131, 0.593135, 0.593134, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxh67"]
bg_color = Color(0.973535, 0.973535, 0.973535, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tbwa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hubvx")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -278.0
offset_top = 30.0
offset_right = 275.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Game over!"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.0
offset_top = 174.0
offset_right = 285.0
offset_bottom = 311.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Score"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = 21.0
offset_right = 341.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_cawlr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oajaw")
theme_override_styles/normal = SubResource("StyleBoxFlat_lxh67")
text = "Restart"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_cawlr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oajaw")
theme_override_styles/normal = SubResource("StyleBoxFlat_lxh67")
text = "Exit
"

[node name="GameoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_1nfwo")
bus = &"Gameover"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
